--- a/style.css
+++ b/style.css
@@ -50,9 +50,10 @@ section {
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 30%;
+  width: 20%;
   display: inline-block;
-  margin: 70px 20px;
+  margin-top: 70px;
+  margin-left: 130px;
   border-radius: 20px;
 }
 
