--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
 }
 h1 {
   font-size: 80px;
+  font-weight: 300;
+}
+h2{
+  font-weight: 400;
 }
 p {
   color: #3e3e3e;
@@ -34,7 +38,7 @@ p {
   text-decoration: none;
   padding: 10px 30px;
   background-image: linear-gradient(45deg, #ff8063, #f46060);
-  border-radius: 2px;
+  border-radius: 10px;
   color: white;
   font-weight: 200;
   font-family: "Roboto", sans-serif;
@@ -46,6 +50,7 @@ section {
 
 .lwp{
   text-align: center;
+  font-weight: 400;
 }
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -86,6 +91,7 @@ h4{
   position: absolute;
   margin-top: 180px;
   margin-left: 850px;
+
 }
 
 #connected{
